Comment and reply section completed

--- a/user_app/templates/dashboard.html
+++ b/user_app/templates/dashboard.html
@@ -8,7 +8,7 @@
 <div><a href="/logout">Logout</a></div>
 <div><img src="http://www.countryflags.io/{{ user.location }}/flat/64.png"></div>
 <form action="/upload" method="post" enctype="multipart/form-data">
-        {{ form }}
+    {{ form }}
     {% csrf_token %}
     <input type="hidden" name="csrfmiddlewaretoken" value="pHK2CZzBB323BM2Nq7DE2sxnQoBG1jPl" disabled="">
     <input type="submit" value="Upload"/>
@@ -16,7 +16,33 @@
 
 </form>
 {% for file in files %}
-    <div><a href="/file-info/{{ file.id }}"><img src="{{ file.file.url }}" width="50px"> </a></div>
+    <div>
+        <div>
+            <a href="/file-info/{{ file.id }}"><img src="{{ file.file.url }}" width="50px"></a>
+            {% for commend in file.commend_set.all %}
+                <div>Admin: {{ commend.comment }}</div>
+                <div>
+                    {% if commend.reply %}
+                        Replay: {{ commend.reply }}
+                    {% else %}
+                        <form action="/reply/{{ commend.id }}" method="post" >
+                        {{ reply_form }}
+                        {% csrf_token %}
+                        <input type="hidden" name="csrfmiddlewaretoken" value="pHK2CZzBB323BM2Nq7DE2sxnQoBG1jPl"
+                               disabled="">
+                            <input type="submit" value="Replay"/>
+                        </form>
+
+
+                    {% endif %}
+
+                </div>
+
+            {% endfor %}
+
+        </div>
+    </div>
+
 {% endfor %}
 </body>
 </html>
