--- a/user_app/templates/dashboard.html
+++ b/user_app/templates/dashboard.html
@@ -5,7 +5,7 @@
     <title>Ulka</title>
 </head>
 <body>
-<div><a href="/logout">Logout</a></div>
+<div><span><a href="/profile">Profile</a></span><span style="padding-left: 5px;"><a href="/logout">Logout</a></span></div>
 <div><img src="http://www.countryflags.io/{{ user.location }}/flat/64.png"></div>
 <form action="/upload" method="post" enctype="multipart/form-data">
     {{ form }}
